update dashboard page, profile and landing page
